src/mcml_project/mcml_project.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xgpio_intr_example_1.build.log
13:14:43 **** Build of configuration Debug for project standalone_bsp_0_xgpio_intr_example_1 ****
make all 
'Building file: ../src/xgpio_intr_example.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xgpio_intr_example.o" -I../../standalone_bsp_0/microblaze_0/include -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mno-xl-soft-div -mcpu=v9.5 -mno-xl-soft-mul -mxl-multiply-high -mhard-float -mxl-float-convert -mxl-float-sqrt -Wl,--no-relax -MMD -MP -MF"src/xgpio_intr_example.d" -MT"src/xgpio_intr_example.d" -o "src/xgpio_intr_example.o" "../src/xgpio_intr_example.c"
../src/xgpio_intr_example.c: In function 'main':
../src/xgpio_intr_example.c:125:25: error: 'XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID' undeclared (first use in this function)
 #define GPIO_DEVICE_ID  XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID
                         ^
../src/xgpio_intr_example.c:238:35: note: in expansion of macro 'GPIO_DEVICE_ID'
  Status = XGpio_Initialize(&Gpio, GPIO_DEVICE_ID);
                                   ^
../src/xgpio_intr_example.c:125:25: note: each undeclared identifier is reported only once for each function it appears in
 #define GPIO_DEVICE_ID  XPAR_PUSH_BUTTONS_4BITS_DEVICE_ID
                         ^
../src/xgpio_intr_example.c:238:35: note: in expansion of macro 'GPIO_DEVICE_ID'
  Status = XGpio_Initialize(&Gpio, GPIO_DEVICE_ID);
                                   ^
../src/xgpio_intr_example.c: In function 'SetupInterruptSystem':
../src/xgpio_intr_example.c:126:32: error: 'XPAR_INTC_0_GPIO_2_VEC_ID' undeclared (first use in this function)
 #define INTC_GPIO_INTERRUPT_ID XPAR_INTC_0_GPIO_2_VEC_ID
                                ^
../src/xgpio_intr_example.c:496:33: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
  XIntc_Connect(IntcInstancePtr, INTC_GPIO_INTERRUPT_ID,
                                 ^
make: *** [src/xgpio_intr_example.o] Error 1

13:14:44 Build Finished (took 180ms)

